# rust_elm_typegen

./: Cargo.toml  LICENSE  README.md
src/: identifier.rs  lib.rs  main.rs
src/testfiles/: README.md
src/tests/: Maybe.elm  Message.elm  Person.elm  Primitives.elm  Reference.elm  Vectors.elm  maybe.rs  message.rs  person.rs  primitives.rs  reference.rs  vectors.rs
