[package]
name = "rust_elm_typegen"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Generate Elm types from Rust types"
keywords = ["elm"]
homepage = "https://github.com/kreibaum/rust_elm_typegen"
repository = "https://github.com/kreibaum/rust_elm_typegen"
readme = "README.md"
categories = ["development-tools::build-utils", "web-programming", ]

[lib]
crate-type = ["lib"]

[[bin]]
name = "rust_elm_typegen"
path = "src/bin/typegen.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1"
syn = {version="1", default-features=false, features=["full", "parsing", "printing", "extra-traits"]}
thiserror = "1"
clap = { version = "3.0.12", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"